# AndroidProject

./: README.md
nsoproject/: settings.gradle.kts
nsoproject/app/: build.gradle.kts
nsoproject/app/src/androidTest/java/com/example/nso_project/: ExampleInstrumentedTest.java
nsoproject/app/src/main/: AndroidManifest.xml
nsoproject/app/src/main/cpp/: CMakeLists.txt  dynamicloader.cpp
nsoproject/app/src/main/cpp/src/main/jniLibs/x86_64/LIEF-0.9.0-Android-x86_64/LIEF-0.9.0-Android/include/LIEF/: config.h
nsoproject/app/src/main/java/com/example/nso_project/: MainActivity.java  Utils.java
nsoproject/app/src/main/res/layout/: activity_main.xml
nsoproject/app/src/main/res/raw/: hello.cpp  myscript.js
nsoproject/app/src/main/res/values/: strings.xml  themes.xml
nsoproject/app/src/main/res/values-night/: themes.xml
nsoproject/app/src/test/java/com/example/nso_project/: ExampleUnitTest.java
nsoproject/gradle/wrapper/: gradle-wrapper.properties
